# job-search-bot

./: .coverage  .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  setup.py
.claude/: CLAUDE.md  cli.md  settings.json
.claude/commands/: commit.md  pr-review.md  test.md
.github/workflows/: scout.yml
config/: targets.yaml
docs/: SCRAPER_PROBE.md  SETUP.md
resumes/: ai_engineer.md  data_scientist.md  software_engineer_ai.md
scripts/: probe_sites.py
src/job_scout/: config.py  models.py  orchestrator.py
src/job_scout/dedup/: store.py
src/job_scout/extractor/: claude_extractor.py
src/job_scout/matcher/: claude_matcher.py
src/job_scout/notifier/: telegram.py
src/job_scout/scraper/: dispatcher.py  http_scraper.py  playwright_scraper.py
tests/: conftest.py  test_claude_extractor.py  test_claude_matcher.py  test_config.py  test_dispatcher.py  test_freshness.py  test_http_scraper.py  test_models.py  test_orchestrator.py  test_pagination.py  test_playwright_scraper.py  test_store.py  test_telegram.py
